--- a/09-mediaqueries/index.html
+++ b/09-mediaqueries/index.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <h1>
+            Mon titre mediaqueries
+        </h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia laborum quo quos perspiciatis, officiis quam deserunt vero iusto ullam quae, eius dolorem animi iste ipsum natus ratione id odit ut.
+            
+        </p>
+    </div>
     
 </body>
 </html>
