--- a/10-transition-animation/index.html
+++ b/10-transition-animation/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>transition-animation</title>
 </head>
 <body>
-    
+   <button class="btn1">Touch me</button>
+   <button class="btn2">Dont touch me</button>
+   <div class="circle"></div>
 </body>
 </html>
