--- a/11-fonts/index.html
+++ b/11-fonts/index.html
@@ -6,11 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
+   
     <title>Font & reset</title>
 </head>
 <body>
-    
+    <div>
+        <h1>un beau titre</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, adipisci. Laboriosam sapiente incidunt, iure eveniet tempora repellat in nihil cupiditate temporibus, iusto maiores nostrum repudiandae asperiores eius ullam quos odio. Ducimus, atque.</p>
+    </div>
+    <ul>
+        <li>coucou</li>
+        <li>coucou</li>
+        <li>coucou</li>
+        <li>coucou</li>
+    </ul>
     
 </body>
 </html>
