--- a/Exercice-05-Sublime/index.html
+++ b/Exercice-05-Sublime/index.html
@@ -25,6 +25,7 @@
         <hr>    
     </header>
     <div class="icons">
+        div
         <img src="./img/icon1.png">
         <img src="./img/icon2.png">
         <img src="./img/icon3.png">
